# smarthome-mcp-lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: claude-web-oauth.md  iot-bridge.md  mcp-setup.md
scripts/: create_agentcore_gateway.py  create_bridge_thing.py  create_cognito.py  create_dynamodb_table.py  create_iot_thing.py  create_lambda.py  package_lambda.py  run_bridge.py  test_gateway.py
scripts/aws/: create_agentcore_gateway.py  create_bridge_thing.py  create_cognito.py  create_dynamodb_table.py  create_lambda.py  package_lambda.py  run_bridge.py  test_gateway.py
src/smarthome/: __init__.py  lambda_handler.py
src/smarthome/agent/: __init__.py  __main__.py  config.py  loop.py  scheduler.py  skill_loader.py  slack_adapter.py
src/smarthome/agent/memory/: __init__.py  (+4 more)
src/smarthome/aws_mcp/: lambda_handler.py
src/smarthome/bridge/: __init__.py  config.py  device_registry.py  iot_bridge.py
src/smarthome/cloud/: __init__.py  iot_commands.py
src/smarthome/devices/: __init__.py  base.py  tapo_bulb.py
src/smarthome/logging/: __init__.py  dynamo_logger.py
src/smarthome/mcp_servers/: light_server.py
tests/: conftest.py  test_agent_chunker.py  test_agent_light_skill.py  test_agent_memory.py  test_agent_skill_loader.py  test_base_device.py  test_device_registry.py  test_dynamo_logger.py  test_iot_bridge.py  test_iot_commands.py  test_lambda_handler.py  test_light_server.py  test_mock_tapo_bulb.py  test_schedule_tool.py  test_scheduler.py  test_shadow_manager.py  test_tapo_bulb.py
tests/mocks/: __init__.py  mock_iot_client.py
(+9 files in other folders)
